Create the nodes, edges and graph for the refactoring advice graph model #1